docs/reports/02-Error-Handling.log
Traceback (most recent call last):
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\JupyterLab\resources\jlab_server\envs\base2exp\lib\site-packages\nbclient\client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
print("Hallo Welt!"
------------------

[1;36m  File [1;32m"C:\Users\nitra\AppData\Local\Temp/ipykernel_5464/380194409.py"[1;36m, line [1;32m1[0m
[1;33m    print("Hallo Welt!"[0m
[1;37m                       ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (Temp/ipykernel_5464/380194409.py, line 1)

